# int8_experiments

./: .gitignore  README.md
cifar/onnxrt/: cifar10_onnxrt.py
cifar/openvino_py/: .openvino_cifar10.py.swp  get_dataset_images.py  models  openvino_cifar10.py  utility.py  vgg19_bn.mapping
cifar/pytorch/: cifar.py
mnist/onnxrt/: LENET.onnx  main.py  utility.py
mnist/openvino_cpp/: Makefile  README.md  cmake_install.cmake
mnist/openvino_cpp/include/vpu/: vpu_plugin_config.hpp
mnist/openvino_py/: mnist.mapping  mnist.onnx  mnist.pkl  mnist.xml  models.py
mnist/openvino_py/mnist_dataset/: get_mnist_img.py
mnist/pytorch/: config.yaml  main.py  utility.py
openvino_cpp/: CMakeCache.txt  CMakeLists.txt
openvino_cpp/include/dlia/: dlia_config.hpp
openvino_py/: config.py  mnist.mapping  mnist.onnx  mnist.pkl  mnist.xml  openvino_mnist.py  utility.py
openvino_py/mnist_dataset/: get_mnist_img.py
pytorch/: 2019_03_08_16_35_37_840373.pkl  config.py  config.yaml  main.py  mnist.onnx  models.py  utility.py
scripts/: get_mnist_img.py  mo.py
